fix: persist TCP mock runtime mappings across restarts